--- a/src/meuComponente.css
+++ b/src/meuComponente.css
@@ -736,14 +736,14 @@ header{
 .secao__diferenciais__container{
 width: 100%;
   max-width: 1400px;
-  height: 700px;
+  max-height: 700px;
   position: relative;
   overflow: hidden;
   border-radius: 30px;
   /*background-image: linear-gradient(to right, #1e0935, #0d0416);*/
   backdrop-filter: brightness(90%);
   /*box-shadow: 0 20px 60px rgba(250, 249, 249, 0.24);*/
-  margin: 0 auto;
+  margin: 2rem auto 0 auto;
 }
 
 .container__diferenciais {
@@ -784,6 +784,132 @@ width: 100%;
 .char {
   display: inline-block;
 }
+
+/*======[OFERTAS]======*/
+
+.ofertas__container{
+  width: 100%;
+  max-width: 1400px;
+  height: 700px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 30px;
+  /*background: linear-gradient(132deg, #000000,#00ff00, #0000ff,#e60073,#ff0000,#ffffff);
+  background-size: 400% 400%;*/
+  margin: 2rem auto;
+  /*animation: Gradient 15s ease infinite;*/
+}
+
+.wave{
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(132deg, #000000, #8400ff);
+  box-shadow: inset 0 0 50px #2c163375;
+  transition: 0.5s;
+}
+
+.wave span {
+  content: "";
+  position: absolute;
+  width: 325vh;
+  height: 325vh;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -75%);
+  background: #000;
+}
+
+.wave span:nth-child(1) {
+  border-radius: 45%;
+  background: rgba(20, 20, 20, 0.404);
+  animation: animate 5s linear infinite;
+}
+
+.wave span:nth-child(2) {
+  border-radius: 40%;
+  background: rgba(20, 20, 20, 0.5);
+  animation: animate 10s linear infinite;
+}
+
+.wave span:nth-child(3) {
+  border-radius: 42.5%;
+  background: rgba(20, 20, 20, 0.5);
+  animation: animate 15s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: translate(-50%, -75%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -75%) rotate(360deg);
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.ofertas__container__conteudo{
+  position: relative;
+  padding-top: 1rem;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.ofertas__container__titulo{
+  font-family: var(--fonte-principal);
+  color: linear-gradient(to right, #ffffff, #2d30ff, #ff0000, #57ec12, );
+  font-size: 7rem;
+  text-align: center;
+  position: relative;
+  line-height: 1;
+  text-shadow: 4px 4px 4px #4d4d4dc5;
+  opacity: 0;
+}
+
+.ofertas__container__titulo span{
+  color: #8400ff;
+  font-size: 7.5rem;
+}
+
+.ofertas__container__titulo.animate {
+  animation-name: text-focus-in;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; /* Mantém o estado final da animação */
+}
+
+@keyframes text-focus-in {
+  0% {
+    transform: translateY(50%);
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+
+
 
 
 
@@ -1094,11 +1220,12 @@ width: 100%;
 
 /*====[CELULAR PORTRAIT]====*/
 
-@media screen and (max-width: 767px) and (orientation: portrait) {
+@media screen and (min-width: 360px) and (max-width: 480px) and (orientation: portrait) {
     header{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        
     }
 
     .menu__cabecalho{
@@ -1120,13 +1247,32 @@ width: 100%;
         padding-top: 6rem;
         max-height: 620px;
         width: 100%;
-        padding-bottom: 1.5rem;                
+        padding-bottom: 5rem;
+        margin-top: 3.5rem; 
     }
 
+    .secao__diferenciais__container{
+      max-height: 480px;
+      width:auto;
+      display: flex;
+      align-items: center;
+      align-content: center;
+      justify-content: center;
+    }    
+
+    
+
+    /*.container__diferenciais{
+      margin-bottom: 0 auto;
+      max-height: 540px;
+      width: auto;
+    }*/
+
     .carrocel {
-      height: 680px;
+      height: 540px;
       max-width: 100%;
-      margin: 0 auto;      
+      margin-top: -8rem;
+          
     }
 
     .carrocel__botao__next,
@@ -1142,11 +1288,12 @@ width: 100%;
       align-items: center;
       justify-content: center;
       padding: 1rem;
+      margin: 0 auto;
       
     }
 
     .carrocel__slide__conteudo {      
-      padding: 1rem;
+      /*padding: 1rem;*/
       justify-content: center;
       align-items: center;
       text-align: justify;
@@ -1168,18 +1315,15 @@ width: 100%;
     }
 
     .carrocel__slide__imagem{
-      display: flex;
+      display: none;
       width: 50%;
     }
 
-    .secao__diferenciais__container{
-      max-height: auto;
+    .container__diferenciais{
+      max-height: 60%;
       width: auto;
       
     }
-      
-
-    
 
     .imagem__capa{
         position:static;
@@ -1210,27 +1354,52 @@ width: 100%;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        text-align: justify;
+        text-align: center;
     }
     
     .texto__principal__titulo{
-        font-size: 140%;
+        font-size: 120%;
     }
 
     .texto__principal__subtitulo{
-        font-size: 85%;
+        font-size: 75%;
     }
 
     .texto__principal__paragrafo{
-        font-size: 75%;
+        font-size: 70%;
     }
 
     .texto__principal__paragrafo strong{
         font-size: 100%;
     }
-}
 
-@media screen and (max-width: 360px) and (orientation: portrait) {
+    .ofertas__container{
+      max-height: auto;
+      width: auto;
+      /*margin: 1rem auto 1rem auto;*/
+      padding: 1rem;
+      margin-top: -8rem;
+    }
+
+    .ofertas__container__conteudo{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
+      padding: 1rem; 
+    }
+
+    .ofertas__container__titulo{
+      font-size: 2.8rem;
+    }
+
+    .ofertas__container__titulo span{
+      font-size: 3rem;
+    }
+  }
+
+/*@media screen and (max-width: 360px) and (orientation: portrait) {
     .texto__principal__titulo{
         font-size: 120%;
     }
@@ -1259,7 +1428,7 @@ width: 100%;
 
     .carrocel__botao__next,
     .carrocel__botao__prev {
-      /*display: none;*/
+      /*display: none;
       height: 2rem;
       width: 2rem;
       font-size: 1rem;
@@ -1305,4 +1474,4 @@ width: 100%;
       width: auto;
       
     }
-}
+}*/
